// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module "database/query" class Query #all() does not modify #snapshots 1`] = `Array []`;

exports[`module "database/query" class Query #all() properly handles null conditions 1`] = `Array []`;

exports[`module "database/query" class Query #all() resolves with the correct array of \`Model\` instances 1`] = `
Array [
  Object {
    "createdAt": null,
    "id": 1,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 2,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 3,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 4,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 5,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 6,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 7,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 8,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 9,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 10,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 11,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 12,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 13,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 14,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 15,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 16,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 17,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 18,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 19,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 20,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 21,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 22,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 23,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 24,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 25,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 26,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 27,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 28,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 29,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 30,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 31,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 32,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 33,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 34,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 35,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 36,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 37,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 38,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 39,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 40,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 41,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 42,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 43,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 44,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 45,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 46,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 47,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 48,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 49,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 50,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 51,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 52,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 53,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 54,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 55,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 56,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 57,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 58,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 59,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 60,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 61,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 62,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 63,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 64,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 65,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 66,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 67,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 68,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 69,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 70,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 71,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 72,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 73,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 74,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 75,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 76,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 77,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 78,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 79,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 80,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 81,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 82,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 83,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 84,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 85,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 86,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 87,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 88,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 89,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 90,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 91,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 92,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 93,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 94,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 95,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 96,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 97,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 98,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 99,
    "updatedAt": null,
  },
  Object {
    "createdAt": null,
    "id": 100,
    "updatedAt": null,
  },
]
`;

exports[`module "database/query" class Query #count() properly modifies #snapshots 1`] = `
Array [
  Array [
    "count",
    "* as countAll",
  ],
]
`;

exports[`module "database/query" class Query #count() removes all snapshots except for filter conditions 1`] = `
Array [
  Array [
    "count",
    "* as countAll",
  ],
]
`;

exports[`module "database/query" class Query #distinct() properly modifies #snapshots 1`] = `
Array [
  Array [
    "distinct",
    Array [
      "posts.title AS title",
    ],
  ],
  Array [
    "select",
    Array [],
  ],
]
`;

exports[`module "database/query" class Query #include() it works when using an array of strings 1`] = `
Array [
  Array [
    Array [
      "includeSelect",
      Array [
        "users.id AS user.id",
        "users.name AS user.name",
        "users.email AS user.email",
        "users.password AS user.password",
        "users.created_at AS user.createdAt",
        "users.updated_at AS user.updatedAt",
      ],
    ],
    Array [
      "leftOuterJoin",
      Array [
        "users",
        "posts.user_id",
        "=",
        "users.id",
      ],
    ],
  ],
  Object {
    "comments": Object {
      "attrs": Array [
        "id",
        "message",
        "edited",
        "userId",
        "postId",
        "createdAt",
        "updatedAt",
        "postId",
      ],
      "foreignKey": "post_id",
      "model": [Function],
      "through": undefined,
      "type": "hasMany",
    },
  },
]
`;

exports[`module "database/query" class Query #include() properly modifies #snapshots when using an object 1`] = `
Array [
  Array [
    Array [
      "includeSelect",
      Array [
        "users.id AS user.id",
        "users.name AS user.name",
      ],
    ],
    Array [
      "leftOuterJoin",
      Array [
        "users",
        "posts.user_id",
        "=",
        "users.id",
      ],
    ],
  ],
  Object {
    "comments": Object {
      "attrs": Array [
        "id",
        "name",
        "edited",
        "updatedAt",
        "postId",
      ],
      "foreignKey": "post_id",
      "model": [Function],
      "through": undefined,
      "type": "hasMany",
    },
  },
]
`;

exports[`module "database/query" class Query #last() properly modifies #snapshots 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.id DESC",
  ],
  Array [
    "limit",
    1,
  ],
]
`;

exports[`module "database/query" class Query #last() respects order if one already exists 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.created_at DESC, tests.id DESC",
  ],
  Array [
    "limit",
    1,
  ],
]
`;

exports[`module "database/query" class Query #offset() does not modify #snapshots if #shouldCount 1`] = `Array []`;

exports[`module "database/query" class Query #offset() properly modifies #snapshots 1`] = `
Array [
  Array [
    "offset",
    10,
  ],
]
`;

exports[`module "database/query" class Query #order() defaults sort direction to \`ASC\` 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.id ASC",
  ],
]
`;

exports[`module "database/query" class Query #order() properly modifies #snapshots 1`] = `
Array [
  Array [
    "orderByRaw",
    "tests.id DESC",
  ],
]
`;

exports[`module "database/query" class Query #order() resolves with the correct array of \`Model\` instances 1`] = `
Array [
  100,
  99,
  98,
  97,
  96,
  95,
  94,
  93,
  92,
  91,
  90,
  89,
  88,
  87,
  86,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  75,
  74,
  73,
  72,
  71,
  70,
  69,
  68,
  67,
  66,
  65,
  64,
  63,
  62,
  61,
  60,
  59,
  58,
  57,
  56,
  55,
  54,
  53,
  52,
  51,
  50,
  49,
  48,
  47,
  46,
  45,
  44,
  43,
  42,
  41,
  40,
  39,
  38,
  37,
  36,
  35,
  34,
  33,
  32,
  31,
  30,
  29,
  28,
  27,
  26,
  25,
  24,
  23,
  22,
  21,
  20,
  19,
  18,
  17,
  16,
  15,
  14,
  13,
  12,
  11,
  10,
  9,
  8,
  7,
  6,
  5,
  4,
  3,
  2,
  1,
]
`;

exports[`module "database/query" class Query #scope() can be chained from other query methods 1`] = `
Array [
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
    ],
  ],
  Array [
    "limit",
    10,
  ],
  Array [
    "where",
    Object {
      "posts.is_public": true,
    },
    "isPublic",
  ],
]
`;

exports[`module "database/query" class Query #scope() can be chained to other query methods 1`] = `
Array [
  Array [
    "where",
    Object {
      "posts.is_public": true,
    },
    "isPublic",
  ],
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
    ],
  ],
  Array [
    "limit",
    10,
  ],
]
`;

exports[`module "database/query" class Query #select() properly modifies #snapshots 1`] = `
Array [
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
      "posts.created_at AS createdAt",
    ],
  ],
]
`;

exports[`module "database/query" class Query #unscope() removes a named scope from #snapshots 1`] = `
Array [
  Array [
    "select",
    Array [
      "posts.id AS id",
      "posts.title AS title",
    ],
  ],
  Array [
    "limit",
    10,
  ],
]
`;

exports[`module "database/query" class Query #whereBetween() properly modifies #snapshots 1`] = `
Array [
  Array [
    "whereBetween",
    Array [
      "posts.user_id",
      Array [
        1,
        10,
      ],
    ],
  ],
]
`;

exports[`module "database/query" class Query #whereRaw() properly modifies #snapshots 1`] = `
Array [
  Array [
    "whereRaw",
    Array [
      "\\"title\\" LIKE ?",
      Array [
        "%Test%",
      ],
    ],
  ],
]
`;
